--- a/Social/post/templates/post/post-details.html
+++ b/Social/post/templates/post/post-details.html
@@ -28,14 +28,6 @@
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">  
-                                {% comment %} <a href = "{% url 'like' post.id %}">
-                                    <span><i class="uil uil-heart"></i></span>
-                                </a>  {% endcomment %}
-                            {% comment %} <span>
-                                <button type="submit"  class="btn btn-custom btn-sm liketoggle like"  name="like">
-                                    <i class="uil uil-heart"></i>
-                                </button>
-                            </span> {% endcomment %}
                             <a href="#" class="like-button" data-url="{% url 'like' post.id %}" data-post-id="{{ post.id }}">
                                 <span>
                                     <i class="uil uil-heart{% if user in post.post_likes.all %} liked{% endif %}"></i>
@@ -46,7 +38,11 @@
                                 <span><i class="uil uil-share-alt"></i></span>
                             </div>
                             <div class="bookmark">
-                                <span><i class="uil uil-bookmark"></i></span>
+                                <a href= "#" class="bookmark-button" bookmark-url="{% url 'favourite' post.id %}" bookmark-id="{{ post.id }}">
+                                    <span>
+                                        <i class="uil uil-bookmark{% if post in user.profile.favourite.all %} saved{% endif %}"></i>
+                                    </span>
+                                </a>
                             </div>
                         </div>
                         <div class="liked-by">
